# x1-mk1-usb2midi

./: .gitignore  Cargo.toml  DecksAB.tsi  FUNDING.yml  README.md  board.yml  bundle.sh
.github/workflows/: rust.yml
src/: conf.rs  kontrol_x1mk1.rs  main.rs  usb.rs  usb_hotplug.rs  utils.rs  x1_board.rs  x1_process.rs
