[package]
name = "x1-mk1-usb2midi"
version = "1.1.1"
edition = "2021"
description = "Converts X1 Mk1 USB events to MIDI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.9.1"
rusb = "0.9"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
system_status_bar_macos = "0.1.3"

[package.metadata.bundle]
name = "X1Mk1 usb2midi"
identifier = "io.github.opa-.x1-mk1-usb2midi"
icon = ["128x128@2x.png"]
category = "public.app-category.music"
resources = ["board.yml"]
